// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DELETE should 200 1`] = `
Object {
  "deleteSuccess": true,
}
`;

exports[`DELETE should 500 1`] = `
Object {
  "deleteSuccess": false,
}
`;

exports[`GET should 200 1`] = `
Object {
  "getSuccess": true,
}
`;

exports[`GET should 404 1`] = `
Object {
  "getSuccess": false,
}
`;

exports[`PATCH should 200 1`] = `
Object {
  "patchSuccess": true,
}
`;

exports[`PATCH should 404 1`] = `
Object {
  "patchSuccess": false,
}
`;

exports[`POST should 201 1`] = `
Object {
  "postSuccess": true,
}
`;

exports[`POST should 404 1`] = `
Object {
  "postSuccess": false,
}
`;

exports[`PUT should 200 1`] = `
Object {
  "putSuccess": true,
}
`;

exports[`PUT should 500 1`] = `
Object {
  "putSuccess": false,
}
`;
